added some more jsdoc comments, extended the openapi.yaml documentation, added a missing 404 return statement to the borrowRecordRoute.ts
